--- a/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
+++ b/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
@@ -1,4 +1,4 @@
-.BreadBottom{
+.BreadBottom {
     height: 13%;
     width: 80%;
     background: linear-gradient(#F08E4A, #e27b36);
@@ -7,29 +7,42 @@
     margin: 2% auto;
 }
 
-.BreadTop{
+.BreadTop {
     height: 20%;
     width: 80%;
     background: linear-gradient(#bc581e, #e27b36);
     border-radius: 50% 50% 0 0;
-    box-shadow: inset -15% 0 #c15711;
+    box-shadow: inset -15px 0 #c15711;
     margin: 2% auto;
     position: relative;
 }
 
-.Seeds1{
+.Seeds1 {
     width: 10%;
     height: 15%;
     position: absolute;
     background-color: white;
-    left: 0;
+    left: 30%;
     top: 50%;
     border-radius: 40%;
     transform: rotate(-20deg);
     box-shadow: inset -2px -3px #c9c9c9;
 }
 
-.Seeds1:before{
+.Seeds1:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: white;
+    left: -170%;
+    top: -260%;
+    border-radius: 40%;
+    transform: rotate(60deg);
+    box-shadow: inset -1px 2px #c9c9c9;
+  }
+  
+.Seeds1:before {
     content: "";
     width: 100%;
     height: 100%;
@@ -40,9 +53,9 @@
     border-radius: 40%;
     transform: rotate(60deg);
     box-shadow: inset -1px -3px #c9c9c9;
-}
+  }
 
-.Seeds2{
+  .Seeds2 {
     width: 10%;
     height: 15%;
     position: absolute;
@@ -52,9 +65,9 @@
     border-radius: 40%;
     transform: rotate(10deg);
     box-shadow: inset -3px 0 #c9c9c9;
-}
-
-.Seeds2::before{
+  }
+  
+  .Seeds2:before {
     content: "";
     width: 100%;
     height: 100%;
@@ -65,10 +78,19 @@
     border-radius: 40%;
     transform: rotate(90deg);
     box-shadow: inset 1px 3px #c9c9c9;
+  }
+  
+
+.Meat {
+    width: 80%;
+    height: 8%;
+    background: linear-gradient(#7f3608, #702e05);
+    margin: 2% auto;
+    border-radius: 15px;
 }
 
-.Meat{
-    width: 80%;
+.Cheese {
+    width: 90%;
     height: 4.5%;
     margin: 2% auto;
     background: linear-gradient(#f4d004, #d6bb22);
