--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,10 +1,10 @@
-.logo{
+.Logo {
     background-color: white;
     padding: 8px;
     height: 100%;
     box-sizing: border-box;
     border-radius: 5px;
 }
-.logo img{
+.Logo img {
     height: 100%;
 }
