--- a/src/components/Navigation/SideDrawer/DrawerToggle/DrawerToggle.module.css
+++ b/src/components/Navigation/SideDrawer/DrawerToggle/DrawerToggle.module.css
@@ -3,7 +3,8 @@
   height: 100%;
   display: flex;
   flex-flow: column;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   padding: 10px 0;
   box-sizing: border-box;
   cursor: pointer;
@@ -16,7 +17,7 @@
 }
 
 @media (min-width: 500px) {
-    .DrawerToggle{
-        display: none;
-    }
+  .DrawerToggle {
+      display: none;
+  }
 }
