--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -1,4 +1,4 @@
-.SideDrawer{
+.SideDrawer {
     position: fixed;
     width: 280px;
     max-width: 70%;
@@ -13,21 +13,22 @@
 }
 
 @media (min-width: 500px) {
-    .SideDrawer{
+    .SideDrawer {
         display: none;
         visibility: hidden;
     }
 }
 
-.Open{
+.Open {
     transform: translateX(0);
 }
 
-.Close{
+.Close {
     transform: translateX(-100%);
 }
 
-.logo{
+
+.Logo {
     height: 11%;
     margin-bottom: 32px;
 }
