--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -1,4 +1,4 @@
-.Toolbar{
+.Toolbar {
     height: 56px;
     width: 100%;
     position: fixed;
@@ -6,7 +6,7 @@
     left: 0;
     background-color: #703B09;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 0 20px;
     box-sizing: border-box;
@@ -15,14 +15,16 @@
 
 .Toolbar nav {
     height: 100%;
+    
 }
 
-.Logo{
+.Logo {
     height: 80%;
 }
 
+
 @media (max-width: 499px) {
-    .DesktopOnly{
+    .DesktopOnly {
         display: none;
         position: absolute;
         top: -100vh;
